Check and summarize chapter1

--- a/オブジェクト指向設計実践ガイド.md
+++ b/オブジェクト指向設計実践ガイド.md
@@ -12,6 +12,10 @@
 9. 第9章 費用対効果の高いテストを設計する
 
 # 1. 第1章 オブジェクト指向設計
+- オブジェクト指向設計とは、「依存関係を管理すること」
+- 実用的な設計とは、未来を推測するものではなく、動くための余地を設計者に残すもの
+- アジャイルが成功するかは、シンプルで適応性があり、柔軟性があるコードにかかっている
+
 # 2. 第2章 単一責任のクラスを設計する
 # 3. 第3章 依存関係を管理する
 # 4. 第4章 柔軟なインターフェイスをつくる
