--- a/オブジェクト指向設計実践ガイド.md
+++ b/オブジェクト指向設計実践ガイド.md
@@ -17,6 +17,10 @@
 - アジャイルが成功するかは、シンプルで適応性があり、柔軟性があるコードにかかっている
 
 # 2. 第2章 単一責任のクラスを設計する
+- 見通しが良く(Transparent)、合理的(Reasonable)で、利用性が高く(Usable)、模範的なコード(Examplary)であるべき(TRUE)
+- どんな些細な振る舞いもそれぞれがただ一箇所のみに存在するようにする
+- 単一責任のクラスを設計することで、その一つのことをアプリケーションの他の部位から隔離し、悪影響を及ぼすことのない変更と重複のない再利用が可能になる
+
 # 3. 第3章 依存関係を管理する
 # 4. 第4章 柔軟なインターフェイスをつくる
 # 5. 第5章 ダックタイピングでコストを削減する
