--- a/オブジェクト指向設計実践ガイド.md
+++ b/オブジェクト指向設計実践ガイド.md
@@ -22,6 +22,9 @@
 - 単一責任のクラスを設計することで、その一つのことをアプリケーションの他の部位から隔離し、悪影響を及ぼすことのない変更と重複のない再利用が可能になる
 
 # 3. 第3章 依存関係を管理する
+- 不必要な依存はコードの合理性を損なうため、依存は簡潔、明示的であり、隔離されているべきである
+- 依存を隔離することによって、オブジェクトは予測していない変更に素早く適応できるようになる
+
 # 4. 第4章 柔軟なインターフェイスをつくる
 # 5. 第5章 ダックタイピングでコストを削減する
 # 6. 第6章 継承によって振る舞いを獲得する
